# agri_4wis_chassis_system

./: .gitattributes  .gitignore  README.md
doc/: ECU_Project_Implementation_v1.4.md
doc/DCDC_12V/: DCDC12V通讯协议.doc
doc/ECU/: HPMicro-MR6750-L管脚对应表.xlsx  MR6750用户手册网址.txt
doc/伺服电机驱动/DC和DE Canopen应用说明251022/: DCHCAN -台达PLC.eds  DCHCAN-lws-s1200(1).eds  DCHCAN.eds
doc/先楫半导体/: HPMsdk的参考资料网址.txt
doc/模拟信号采集/: 8路模拟量采集模块说明书.doc
doc/继电器盒/: 继电器盒接线1.4.docx
doc/遥控器/: 遥控器使用说明文档.docx
docs/: ecu-board-test-code-reading-guide.md  ecu-board-test-full-code-walkthrough.md  ecu-configuration-open-items.md  ecu-main-control-architecture.md  ecu-main-control-progress.md  ecu-project-readiness.md  ecu-sbus-service-debug-notes.md  ecu-test-progress.md
docs/superpowers/plans/: 2026-06-23-ecu-board-functional-test-implementation.md  2026-06-24-code-audit-rgb-reading-guide-implementation.md  2026-06-24-function-comments-implementation.md  2026-06-24-periodic-communications-transmit-implementation.md  2026-06-25-debug-monitor-structure-implementation.md  2026-06-25-sbus-interrupt-monitor-implementation.md  2026-06-27-ecu-full-hardware-framework.md  2026-06-27-ecu-main-control-framework.md  2026-06-28-canopennode-bc2-diagnostics.md  2026-06-28-ecu-config-naming-and-can-bus-alignment.md  2026-06-28-ecu-device-control-middleware.md  2026-06-28-modbus-virtual-adc-canopen-command-debug.md  2026-06-28-power-supplier-can.md  2026-06-29-complete-ecu-control-closure.md  2026-07-01-four-wheel-kinematics.md
docs/superpowers/specs/: 2026-06-23-ecu-board-functional-test-design.md  2026-06-24-code-audit-rgb-reading-guide-design.md  2026-06-24-function-comments-design.md  2026-06-24-periodic-communications-transmit-design.md  2026-06-25-debug-monitor-structure-design.md  2026-06-25-sbus-interrupt-monitor-design.md  2026-06-28-canopennode-bc2-diagnostics-design.md  2026-06-28-ecu-device-control-middleware-design.md  2026-06-28-modbus-virtual-adc-canopen-command-debug-design.md  2026-06-28-power-supplier-can-design.md
docs/test_logs/: 2026-06-30-whole-vehicle-communication-test.md
ecu/apps/agri_chassis_control_cpu0/: CMakeLists.txt  app.yaml
ecu/apps/agri_chassis_control_cpu0/src/: FreeRTOSConfig.h  canopen_errno.h  main_cpu0.c  user_config.h
ecu/apps/agri_chassis_control_cpu1/: CMakeLists.txt
ecu/apps/agri_chassis_control_cpu1/src/: FreeRTOSConfig.h  main_cpu1.c
ecu/apps/ecu_board_test/: CMakeLists.txt  app.yaml
ecu/apps/ecu_board_test/include/: adc_math.h  app_shell.h  cli.h  comm_pattern.h  debug_monitor.h  memory_patterns.h  operator_io.h  periodic_tx.h  result_writer.h  safety_manager.h  sbus_decoder.h  sbus_service.h  selftest.h  status_led.h  test_cases.h  test_limits.h  test_registry.h  test_runner.h  test_types.h
ecu/apps/ecu_board_test/linkers/gcc/: ecu_board_test_linker.ld
ecu/apps/ecu_board_test/linkers/iar/: ecu_board_test_linker.icf
ecu/apps/ecu_board_test/linkers/segger/: ecu_board_test_linker.icf
ecu/apps/ecu_board_test/selftest/: selftest.c  selftest_algorithms.c  selftest_cli_runner.c  selftest_debug_monitor.c  selftest_periodic_tx.c  selftest_result.c  selftest_safety.c  selftest_sbus_service.c  selftest_status_led.c
ecu/apps/ecu_board_test/src/: adc_math.c  app_shell.c  cli.c  comm_pattern.c  debug_monitor.c  main.c  memory_patterns.c  operator_io.c  periodic_tx.c  periodic_tx_board.c  result_writer.c  safety_manager.c  sbus_decoder.c  sbus_service.c  status_led.c  test_registry.c  test_runner.c  test_types.c
ecu/apps/ecu_board_test/tests/: test_adc.c  test_boot.c  test_can.c  test_digital_input.c  test_digital_output.c  test_dio_loopback.c  test_ethernet.c  test_memory.c  test_power.c  test_rgb.c  test_rs232.c  test_rs485.c  test_sbus.c  test_serial_common.c  test_serial_common.h
ecu/boards/ecu_isolation/: CMakeLists.txt  board.c  board.h  ecu_isolation.cfg  ecu_isolation.yaml  pinmux.c  pinmux.hpmpc
ecu/common/include/: ecu_time.h  ecu_types.h
ecu/config/include/: ecu_config.h
ecu/config/src/: ecu_config.c
ecu/control/include/: adjust_control.h  four_wheel_kinematics.h  motion_control.h
ecu/control/src/: adjust_control.c  four_wheel_kinematics.c  motion_control.c
ecu/devices/include/: analog_modbus_device.h  lift_hydraulic_device.h  local_io_device.h  motion_device.h  power_device.h  servo_drive_canopen.h  warning_light_device.h
ecu/devices/src/: analog_modbus_device.c  lift_hydraulic_device.c  local_io_device.c  motion_device.c  power_device.c  servo_drive_canopen.c  warning_light_device.c
ecu/diag/include/: commissioning_debug.h  diag_codes.h  runtime_monitor.h
ecu/diag/src/: commissioning_debug.c  diag_codes.c  runtime_monitor.c
ecu/ecu_isolation/: board.c  board.h  pinmux.c  pinmux.h
ecu/ipc/include/: ipc_snapshot.h
ecu/ipc/src/: ipc_snapshot.c
ecu/os/include/: ecu_tasks.h
ecu/os/src/: ecu_tasks_cpu0.c  ecu_tasks_cpu1.c
ecu/remote/include/: remote_adjust_fsm.h  remote_arm_fsm.h  remote_authority_fsm.h  remote_discrete.h  remote_estop_fsm.h  remote_event_lifecycle.h  remote_gear_fsm.h  remote_lights_fsm.h  remote_link_fsm.h  remote_manager.h  remote_mode_fsm.h  remote_power_fsm.h  remote_sbus_mapper.h  remote_types.h
ecu/remote/src/: remote_adjust_fsm.c  remote_arm_fsm.c  remote_authority_fsm.c  remote_discrete.c  remote_estop_fsm.c  remote_event_lifecycle.c  remote_gear_fsm.c  remote_lights_fsm.c  remote_link_fsm.c  remote_manager.c  remote_mode_fsm.c  remote_power_fsm.c  remote_sbus_mapper.c
ecu/scripts/: build_ecu_test.ps1  flash_ecu_test.ps1  generate_ses_ecu_test.ps1  load_ecu_test.jlink  read_ecu_info.jlink  serial_console.ps1
ecu/vehicle/include/: command_arbiter.h  safety_manager.h  vehicle_command_executor.h  vehicle_state.h  vehicle_types.h
test/fixtures/: ecu-board-test-procedure.md  ecu-board-test-wiring.md
tests/python/: run_tests.py  test_hardware_framework.py  test_power_supplier_can.py  test_remote_fsm.py  test_vehicle_arbiter.py
tools/: check_no_forbidden_patterns.py
tools/can/: can2_monitor.py  controlcan.py
tools/modbus/: rtu_codec.py  rtu_probe.py  virtual_adc_module.py
(+40 files in other folders)
