cmake_minimum_required(VERSION 3.13)

set(CONFIG_FREERTOS 1)

if("${HPM_BUILD_TYPE}" STREQUAL "")
    set(HPM_BUILD_TYPE flash_xip)
endif()

find_package(hpm-sdk REQUIRED HINTS $ENV{HPM_SDK_BASE})

project(agri_chassis_control_cpu0)

sdk_compile_definitions(-DUSE_NONVECTOR_MODE=1)
sdk_compile_definitions(-DDISABLE_IRQ_PREEMPTIVE=1)

sdk_inc(src)
sdk_inc(../../common/include)
sdk_inc(../../config/include)
sdk_inc(../../diag/include)
sdk_inc(../../protocol/sbus/include)
sdk_inc(../../drivers/sbus/include)
sdk_inc(../../remote/include)
sdk_inc(../../vehicle/include)
sdk_inc(../../control/include)
sdk_inc(../../ipc/include)
sdk_inc(../../os/include)

sdk_app_src(src/main_cpu0.c)
sdk_app_src(../../config/src/ecu_config.c)
sdk_app_src(../../diag/src/diag_codes.c)
sdk_app_src(../../protocol/sbus/src/sbus_decoder.c)
sdk_app_src(../../drivers/sbus/src/sbus_service.c)
sdk_app_src(../../remote/src/remote_discrete.c)
sdk_app_src(../../remote/src/remote_event_lifecycle.c)
sdk_app_src(../../remote/src/remote_link_fsm.c)
sdk_app_src(../../remote/src/remote_arm_fsm.c)
sdk_app_src(../../remote/src/remote_estop_fsm.c)
sdk_app_src(../../remote/src/remote_gear_fsm.c)
sdk_app_src(../../remote/src/remote_mode_fsm.c)
sdk_app_src(../../remote/src/remote_adjust_fsm.c)
sdk_app_src(../../remote/src/remote_power_fsm.c)
sdk_app_src(../../remote/src/remote_authority_fsm.c)
sdk_app_src(../../remote/src/remote_lights_fsm.c)
sdk_app_src(../../remote/src/remote_manager.c)
sdk_app_src(../../vehicle/src/command_arbiter.c)
sdk_app_src(../../vehicle/src/safety_manager.c)
sdk_app_src(../../vehicle/src/vehicle_command_executor.c)
sdk_app_src(../../vehicle/src/vehicle_state.c)
sdk_app_src(../../control/src/motion_control.c)
sdk_app_src(../../control/src/adjust_control.c)
sdk_app_src(../../ipc/src/ipc_snapshot.c)
sdk_app_src(../../os/src/ecu_tasks_cpu0.c)

generate_ide_projects()
