cmake_minimum_required(VERSION 3.13)

set(CONFIG_FREERTOS 1)
set(CONFIG_AGILE_MODBUS 1)
set(CONFIG_AGILE_MODBUS_RTU 1)

option(ECU_ENABLE_CANOPENNODE "Enable HPM SDK CANopenNode after project OD.h/OD.c are generated" OFF)
if(ECU_ENABLE_CANOPENNODE)
    set(CONFIG_CANOPEN 1)
endif()

if("${HPM_BUILD_TYPE}" STREQUAL "")
    set(HPM_BUILD_TYPE flash_xip)
endif()

if("$ENV{HPM_SDK_BASE}" STREQUAL "")
    set(ENV{HPM_SDK_BASE} "${CMAKE_CURRENT_LIST_DIR}/../../sdk_env_v1.11.0/hpm_sdk")
endif()
if("$ENV{GNURISCV_TOOLCHAIN_PATH}" STREQUAL "")
    set(ENV{GNURISCV_TOOLCHAIN_PATH} "${CMAKE_CURRENT_LIST_DIR}/../../sdk_env_v1.11.0/toolchains/rv32imac_zicsr_zifencei_multilib_b_ext-win")
endif()

find_package(hpm-sdk REQUIRED HINTS $ENV{HPM_SDK_BASE})

project(agri_chassis_control_cpu0)

sdk_compile_definitions(-DUSE_NONVECTOR_MODE=1)
sdk_compile_definitions(-DDISABLE_IRQ_PREEMPTIVE=1)
if(ECU_ENABLE_CANOPENNODE)
    sdk_compile_definitions(-DECU_ENABLE_CANOPENNODE=1)
    sdk_compile_definitions(-DCONFIG_CANOPEN_MASTER=1)
    sdk_compile_definitions("-DCO_CONFIG_FIFO=(CO_CONFIG_FIFO_ENABLE)")
    sdk_compile_definitions("-DCO_CONFIG_NMT=0x3002")
    sdk_compile_definitions("-DCO_CONFIG_SDO_CLI=(CO_CONFIG_SDO_CLI_ENABLE|CO_CONFIG_SDO_CLI_SEGMENTED)")
else()
    sdk_compile_definitions(-DECU_ENABLE_CANOPENNODE=0)
endif()

sdk_inc(src)
sdk_inc(../../common/include)
sdk_inc(../../config/include)
sdk_inc(../../diag/include)
sdk_inc(../../protocol/canopen/include)
if(ECU_ENABLE_CANOPENNODE)
    sdk_inc(../../protocol/canopen/od/ds301)
endif()
sdk_inc(../../protocol/modbus/include)
sdk_inc(../../protocol/power_can/include)
sdk_inc(../../protocol/sbus/include)
sdk_inc(../../drivers/adc/include)
sdk_inc(../../drivers/can/include)
sdk_inc(../../drivers/canopen/include)
sdk_inc(../../drivers/dio/include)
sdk_inc(../../drivers/sbus/include)
sdk_inc(../../drivers/uart/include)
sdk_inc(../../devices/include)
sdk_inc(../../remote/include)
sdk_inc(../../vehicle/include)
sdk_inc(../../control/include)
sdk_inc(../../ipc/include)
sdk_inc(../../os/include)

sdk_app_src(src/main_cpu0.c)
sdk_app_src(../../config/src/ecu_config.c)
sdk_app_src(../../diag/src/diag_codes.c)
sdk_app_src(../../diag/src/runtime_monitor.c)
sdk_app_src(../../protocol/canopen/src/canopen_frame.c)
if(ECU_ENABLE_CANOPENNODE)
    sdk_app_src(../../protocol/canopen/od/ds301/OD.c)
    sdk_app_src(../../drivers/canopen/src/canopen_master_service.c)
endif()
sdk_app_src(../../protocol/modbus/src/modbus_rtu.c)
sdk_app_src(../../protocol/power_can/src/power_can_protocol.c)
sdk_app_src(../../protocol/sbus/src/sbus_decoder.c)
sdk_app_src(../../drivers/adc/src/analog_input_service.c)
sdk_app_src(../../drivers/can/src/can_bus_hw.c)
sdk_app_src(../../drivers/can/src/can_bus_service.c)
sdk_app_src(../../drivers/dio/src/dio_hw.c)
sdk_app_src(../../drivers/dio/src/dio_service.c)
sdk_app_src(../../drivers/sbus/src/sbus_service.c)
sdk_app_src(../../drivers/sbus/src/sbus_uart_hw.c)
sdk_app_src(../../drivers/uart/src/modbus_master_service.c)
sdk_app_src(../../drivers/uart/src/uart_comm_service.c)
sdk_app_src(../../drivers/uart/src/uart_rs485_hw.c)
sdk_app_src(../../devices/src/analog_modbus_device.c)
sdk_app_src(../../devices/src/power_device.c)
sdk_app_src(../../devices/src/servo_drive_canopen.c)
sdk_app_src(../../devices/src/motion_device.c)
sdk_app_src(../../devices/src/lift_hydraulic_device.c)
sdk_app_src(../../devices/src/local_io_device.c)
sdk_app_src(../../devices/src/warning_light_device.c)
sdk_app_src(../../remote/src/remote_discrete.c)
sdk_app_src(../../remote/src/remote_event_lifecycle.c)
sdk_app_src(../../remote/src/remote_link_fsm.c)
sdk_app_src(../../remote/src/remote_arm_fsm.c)
sdk_app_src(../../remote/src/remote_estop_fsm.c)
sdk_app_src(../../remote/src/remote_gear_fsm.c)
sdk_app_src(../../remote/src/remote_mode_fsm.c)
sdk_app_src(../../remote/src/remote_adjust_fsm.c)
sdk_app_src(../../remote/src/remote_power_fsm.c)
sdk_app_src(../../remote/src/remote_authority_fsm.c)
sdk_app_src(../../remote/src/remote_lights_fsm.c)
sdk_app_src(../../remote/src/remote_manager.c)
sdk_app_src(../../vehicle/src/command_arbiter.c)
sdk_app_src(../../vehicle/src/safety_manager.c)
sdk_app_src(../../vehicle/src/vehicle_command_executor.c)
sdk_app_src(../../vehicle/src/vehicle_state.c)
sdk_app_src(../../control/src/motion_control.c)
sdk_app_src(../../control/src/adjust_control.c)
sdk_app_src(../../ipc/src/ipc_snapshot.c)
sdk_app_src(../../os/src/ecu_tasks_cpu0.c)

generate_ide_projects()
