cmake_minimum_required(VERSION 3.13)

set(CUSTOM_GCC_LINKER_FILE ${CMAKE_CURRENT_SOURCE_DIR}/linkers/gcc/ecu_board_test_linker.ld)
set(CUSTOM_SES_LINKER_FILE ${CMAKE_CURRENT_SOURCE_DIR}/linkers/segger/ecu_board_test_linker.icf)
set(CUSTOM_IAR_LINKER_FILE ${CMAKE_CURRENT_SOURCE_DIR}/linkers/iar/ecu_board_test_linker.icf)

find_package(hpm-sdk REQUIRED HINTS $ENV{HPM_SDK_BASE})
project(ecu_board_test)

sdk_app_inc(include)
sdk_app_src(src/main.c)
sdk_app_src(src/test_types.c)
sdk_app_src(src/safety_manager.c)
sdk_app_src(src/cli.c)
sdk_app_src(src/test_runner.c)
sdk_app_src(src/adc_math.c)
sdk_app_src(src/memory_patterns.c)
sdk_app_src(src/comm_pattern.c)
sdk_app_src(src/sbus_decoder.c)
sdk_app_src(src/operator_io.c)
sdk_app_src(src/result_writer.c)
sdk_app_src(src/test_registry.c)
sdk_app_src(src/app_shell.c)
sdk_app_src(src/status_led.c)
sdk_app_src(src/periodic_tx.c)
sdk_app_src(tests/test_boot.c)
sdk_app_src(tests/test_power.c)
sdk_app_src(tests/test_rgb.c)
sdk_app_src(tests/test_memory.c)
sdk_app_src(tests/test_adc.c)
sdk_app_src(tests/test_digital_input.c)
sdk_app_src(tests/test_digital_output.c)
sdk_app_src(tests/test_dio_loopback.c)
sdk_app_src(tests/test_can.c)
sdk_app_src(tests/test_serial_common.c)
sdk_app_src(tests/test_rs485.c)
sdk_app_src(tests/test_rs232.c)
sdk_app_src(tests/test_sbus.c)
sdk_app_src(tests/test_ethernet.c)
sdk_app_inc(tests)
sdk_app_src(selftest/selftest.c)
sdk_app_src(selftest/selftest_result.c)
sdk_app_src(selftest/selftest_safety.c)
sdk_app_src(selftest/selftest_cli_runner.c)
sdk_app_src(selftest/selftest_algorithms.c)
sdk_app_src(selftest/selftest_status_led.c)
sdk_app_src(selftest/selftest_periodic_tx.c)

# Match the HPM SDK SEGGER RTT examples' native J-Link configuration while
# retaining UART0 as this application's operator console (RTT is not enabled).
sdk_ses_opt_debug_connection(J-Link)
sdk_ses_opt_debug_jlink_speed(4000)
generate_ide_projects()
